# Friday-Assistant-Framework

./: .env.example  .gitignore  Dockerfile  FEATURES_SUMMARY.md  GMAIL_SETUP.md  README.md  Run Friday.bat  check_gpu.py  list_models.py  list_voices.py  main.py  pyproject.toml  requirements.txt  setup_model.py
friday/memory/: sentiment.py
friday/skills/: calendar.py  calendar_api.py  file_operations.py  memory_skills.py  registry.py  scheduler.py
friday/stt/: engine.py
src/friday/core/: monitor.py  state.py
src/friday/llm/: router.py
src/friday/skills/: email.py  internet.py  vision.py
src/friday/tts/: engine.py
src/friday/ui/: hud.py
src/friday/utils/: app_cache.py
