[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "friday-assistant"
version = "0.1.0"
description = "A modular, extensible personal AI assistant inspired by Iron Man's FRIDAY."
authors = [{name = "Pro Friday Team", email = "dev@friday.ai"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "speechrecognition",
    "pyttsx3",
    "openai",
    "pyautogui",
    "pyaudio",
    "PyQt6",
    "python-dotenv",
    "colorama",
    "psutil",
    "httpx"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
